results/SpecGenBench/4-shot/log-IntCube-2023_11_27_18_08_37.txt
public class IntCube {
    //@ requires x >= Integer.MIN_VALUE && x <= Integer.MAX_VALUE;
    //@ ensures \result == x*x*x;
    public static int cubeOf(int x) {
        boolean neg = false;
        if(x < 0) {
            neg = true;
            x = -x;
        }
        int res = 0;
        //@ maintaining 0 <= i && i <= x;
        //@ maintaining (\forall int m; 0 <= m && m < i; (\forall int n; 0 <= n && n < x; (\forall int p; 0 <= p && p < x; res == i*x*x + m*x + n));
        //@ decreases x - i;
        for(int i = 0; i < x; i++) {
            //@ maintaining 0 <= j && j <= x;
            //@ maintaining (\forall int n; 0 <= n && n < j; (\forall int p; 0 <= p && p < x; res == i*x*x + j*x + n));
            //@ decreases x - j;
            for(int j = 0; j < x; j++) {
                //@ maintaining 0 <= k && k <= x;
                //@ maintaining (\forall int p; 0 <= p && p < k; res == i*x*x + j*x + k);
                //@ decreases x - k;
                for(int k = 0; k < x; k++) {
                    res = res + 1;
                }
            }
        }
        return (neg ? -res : res);
    }
}
/home/max/Documents/JMLGPT/tmp/IntCube.java:12: error: ')' expected
        //@ maintaining (\forall int m; 0 <= m && m < i; (\forall int n; 0 <= n && n < x; (\forall int p; 0 <= p && p < x; res == i*x*x + m*x + n));
                                                                                                                                                   ^
1 error

